# psrcov

./: Dada_header.txt  Makefile  Makefile.am  Makefile.in  README.md  UDP2dada  UDP2dada19BEAM.c  UDP2dadaUWB.c  UDP2psrfits  UDP2psrfits.c  aclocal.m4  ascii_header.lo  config.h.in  config.status  configure  configure.ac  cvrt2to8.lo  date2mjd.c  date2mjd.lo  date2mjd_ld.c  date2mjd_ld.lo  dec2hms.lo  downsample.lo  getUDPDetection.c  getUDPDetection.lo  getVDIFFrameDetection.c  getVDIFFrameDetection.lo  libVDIF.la  libtool  mjd2date.lo  modFpsrfits.c  nuppi2dada.c  polyco.lo  ran.c  set_coor  set_coor.c  srcname_corr.c  vdif2dada-alma.c  vdif2dada-eb.c  vdif2dadaALMA.c  (+9 more)
autom4te.cache/: output.0  output.1  output.10  output.11  output.2  output.3  output.4  output.5  output.6  output.7  output.8  requests  traces.0  traces.1  traces.10  traces.11  traces.12  traces.2  traces.3  traces.4  traces.5  traces.6  traces.7  traces.8  traces.9
